--- a/src/styles/css/layout/menu.css
+++ b/src/styles/css/layout/menu.css
@@ -14,7 +14,6 @@ header {
   top: -100px;
   left: 0;
   z-index: 2;
-  overflow-x: hidden;
 }
 header.hidden {
   top: -6.25rem;
@@ -30,21 +29,18 @@ header.visible img {
   width: 40%;
 }
 header.visible .menuList {
-  z-index: 3;
+  z-index: 100;
   flex-direction: column;
   position: absolute;
-  top: 100%;
-  right: 0;
+  top: 99%;
+  right: 32px;
   background-color: #FF4500;
-  padding: 2rem 1rem;
+  padding: 1rem;
   color: #F5F5F5;
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   align-items: center;
-  width: 100%;
-  max-width: 100vw;
-  overflow-x: hidden;
   display: none;
 }
 header.visible .menuList.open {
@@ -60,9 +56,6 @@ header.visible .menuList.open .menuItem:last-child {
 }
 header.visible .menuList.open .menuItem:first-child {
   padding-top: 0;
-}
-header.visible .menuList.closed {
-  display: none;
 }
 header.visible .menuIcon {
   font-size: 2rem;
