--- a/src/styles/sass/layout/menu.sass
+++ b/src/styles/sass/layout/menu.sass
@@ -13,7 +13,6 @@ header
     top: -100px
     left: 0
     z-index: 2
-    overflow-x: hidden
 
     &.hidden
         top: -6.25rem
@@ -28,23 +27,19 @@ header
         img
             width: 40%
 
-
         .menuList
-            z-index: 3
+            z-index: 100
             flex-direction: column
             position: absolute
-            top: 100%
-            right: 0
+            top: 99%
+            right: 32px
             background-color: colors.$red
-            padding: 2rem 1rem
+            padding: 1rem
             color: colors.$white
             text-transform: uppercase
             font-family: text.$title-font
             font-weight: text.$bold
             align-items: center
-            width: 100%
-            max-width: 100vw
-            overflow-x: hidden
             display: none
 
             &.open
@@ -60,9 +55,6 @@ header
 
                     &:first-child
                         padding-top: 0
-
-            &.closed
-                display: none
 
         .menuIcon
             font-size: text.$titles-text
