--- a/src/styles/sass/layout/menu.sass
+++ b/src/styles/sass/layout/menu.sass
@@ -24,8 +24,8 @@ header
         transform: translateY(0)
         pointer-events: auto
 
-        img
-            width: 40%
+        // img
+        //     width: 40%
 
         .menuList
             z-index: 100
